<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layoutDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_user"
                    app:layout_constraintBottom_toTopOf="@id/txtName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/txtUsername"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgUser" />

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/txtBio"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtName" />

                <TextView
                    android:id="@+id/txtBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/bio"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtUsername" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideHorizontal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/icon_company"
                    app:layout_constraintBottom_toTopOf="@id/imageView4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtCompany"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal1"
                    app:srcCompat="@drawable/ic_company" />

                <TextView
                    android:id="@+id/txtCompany"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/company"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@id/txtLocation"
                    app:layout_constraintLeft_toRightOf="@id/imageView3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal1" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/icon_location"
                    app:layout_constraintBottom_toTopOf="@id/imageView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtLocation"
                    app:layout_constraintTop_toBottomOf="@id/imageView3"
                    app:srcCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@id/txtUrl"
                    app:layout_constraintLeft_toRightOf="@id/imageView4"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCompany" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/icon_url"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtUrl"
                    app:layout_constraintTop_toBottomOf="@id/imageView4"
                    app:srcCompat="@drawable/ic_url" />

                <TextView
                    android:id="@+id/txtUrl"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/url"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal3"
                    app:layout_constraintLeft_toRightOf="@id/imageView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtLocation" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideHorizontal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideHorizontal4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/txtRepository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtGist"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/textView3"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal4" />

                <TextView
                    android:id="@+id/txtGist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/gist"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal4"
                    app:layout_constraintLeft_toRightOf="@id/txtRepository"
                    app:layout_constraintRight_toLeftOf="@id/txtFollowing"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/gist"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textView12"
                    app:layout_constraintRight_toLeftOf="@id/textView11"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal4" />

                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal4"
                    app:layout_constraintLeft_toRightOf="@id/txtGist"
                    app:layout_constraintRight_toLeftOf="@id/txtFollower"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal3" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textView3"
                    app:layout_constraintRight_toLeftOf="@id/textView13"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal4" />

                <TextView
                    android:id="@+id/txtFollower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/follower"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/guideHorizontal4"
                    app:layout_constraintLeft_toRightOf="@id/txtFollowing"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal3" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/follower"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textView11"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/guideHorizontal4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/status_user"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_favorite_border" />

</RelativeLayout>